[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "template_package"
authors = [
  { name="Template Changeme", email="template@changeme.com"}
]
description = "a template python package"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
keywords = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.examples = { file = ["requirements.examples.txt"]}


[tool.setuptools_scm]
version_file = "src/template_package/__version__.py"
version_scheme = 'post-release'

[tool.setuptools.packages.find]
where = ["src"]